removed lots of unneeded stuff